# mpc-reinforcement-learning

./: .cmd  .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .sh  LICENSE  README.MD  README.md  coverage.lcov  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  tmp.py
.github/workflows/: ci.yml  test-experimental.yml  test-main.yml  tests.yml
docs/: .readthedocs.yaml  author.rst  banners.rst  conf.py  getting-started.rst  index.rst  introduction.rst  make.bat  module-reference.rst  motivating-example.rst  references.bib  requirements-docs.txt
docs/_static/: mpcrl.diagram.tex  switcher.json
docs/_templates/: class.rst  module.rst
docs/user-guide/: index.rst  installation.rst  simple-task.rst
docs/user-guide/agents/: agent.rst  base-agents.rst  concrete-agents.rst  grad-based-rl-agents.rst  grad-free-agents.rst  hierarchy.rst  inheritance.rst  learning-agents.rst
docs/user-guide/getting-started/: installation.rst  simple-task.rst
docs/user-guide/theory/: globopt.rst  mpc.rst  mpcrl.rst  rl.rst
examples/: README.rst  bayesopt.py  dpg.py  q_learning.py  q_learning_offpolicy.py  q_learning_vector.py
examples/gradient-based-offpolicy/: README.rst  q_learning_offpolicy.py
examples/gradient-based-onpolicy/: README.rst  dpg.py  q_learning.py
examples/gradient-free/: README.rst  bayesopt.py
examples/others/: README.rst  acc_with_iccbf.py  sampling_from_polytopes.py
src/mpcrl/: __init__.py  errors.py  experience.py  util.py
src/mpcrl/agents/: agent.py  globopt_learning_agent.py  learning_agent.py  learning_agents.py  lstd_dpg.py  lstd_q_learning.py  rl_learning_agent.py
src/mpcrl/agents/common/: agent.py  globopt_learning_agent.py  learning_agent.py  rl_learning_agent.py
src/mpcrl/core/: __init__.py  callbacks.py  errors.py  experience.py  exploration.py  learning_rate.py  named.py  parameters.py  random.py  schedulers.py  update.py  warmstart.py
src/mpcrl/optim/: __init__.py  adam.py  base_optimizer.py  gradient_based_optimizer.py  gradient_descent.py  gradient_free_optimizer.py  newton_method.py  rmsprop.py
src/mpcrl/util/: __init__.py  control.py  geometry.py  iters.py  math.py  named.py  random.py  seeding.py  types.py
src/mpcrl/wrappers/: __init__.py  log.py  record_updates.py  wrapper.py
src/mpcrl/wrappers/agents/: __init__.py  evaluate.py  log.py  record_updates.py  wrapper.py
src/mpcrl/wrappers/envs/: __init__.py  monitor_episode.py  monitor_episodes.py  monitor_infos.py
tests/: data_test_examples.mat  data_test_examples_linux.mat  data_test_examples_win32.mat  examples_data.mat  test_agent.py  test_core.py  test_examples.py  test_experience.py  test_named.py  test_optim.py  test_quadrotor_q_learning.py  test_util.py  test_wrappers.py  tests_data.mat
