[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpcrl"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Reinforcement Learning with Model Predictive Control"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "csnlp >= 1.6.8",
    "scipy >= 1.11.1",
    "gymnasium >= 0.29.0",
    "numba >= 0.57.1",
]
keywords = [
    "reinforcement-learning",
    "model-predictive-control",
    "optimization",
    "casadi",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/mpc-reinforcement-learning"
"Bug Tracker" = "https://github.com/FilippoAiraldi/mpc-reinforcement-learning/issues"

[project.optional-dependencies]
test = [
  "coverage[toml] >= 7.13.5",
  "parameterized >= 0.9.0",
  "torch >= 2.9.1",
  "botorch >= 0.17.2",
]

[tool.setuptools.dynamic]
version = {attr = "mpcrl.__version__"}

[tool.ruff.lint]  # https://docs.astral.sh/ruff/rules
extend-select = [
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "E",
    "F",
    "FURB",
    "I",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "T10",
    "TC",
    "UP",
    "W",
]
extend-ignore = ["ANN401", "B019", "E402", "E731", "PLC0415", "PLR"]
allowed-confusables = ["σ"]

[tool.ruff.lint.extend-per-file-ignores]
"**/{tests,docs,examples}/*" = ["ANN", "B", "NPY", "PL", "RUF"]
"src/mpcrl/__init__.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "casadi.*",
    "csnlp.*",
    "matplotlib.*",
    "parameterized.*",
    "scipy.*",
    "mpcrl.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "docs/*",
    "examples/*",
    "tests/*",
    "*/csnlp/*",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
sort = "miss"
